// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledAvatarStackButton /> should render with theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border-radius: 4px;
  border: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  padding: 2px;
  -webkit-transition: 200ms ease-out;
  transition: 200ms ease-out;
  cursor: pointer;
}

.c0:hover {
  background: #F1F1F1;
  box-shadow: 0 0 0 1px #E0E0E0;
}

.c0:focus-visible {
  background: #F1F1F1;
  box-shadow: 0 0 0 2px #0056E0;
}

<button
  className="c0"
/>
`;

exports[`<StyledAvatarStackDiv /> should render with theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border-radius: 4px;
  border: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  padding: 2px;
  -webkit-transition: 200ms ease-out;
  transition: 200ms ease-out;
}

<div
  className="c0"
/>
`;
